sample/asm/invalid_operand_types/iinc.asm
.function: main/1
    register (class 1 Foo)
    new 1 Foo

    iinc 1

    izero 0
    return
.end
